operator/pkg/gateway-api/testdata/gateway/listenerset-protocol-conflict/output/listenerset-ls-proto-conflict-only.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  creationTimestamp: null
  name: ls-proto-conflict-only
  namespace: gateway-conformance-infra
  resourceVersion: "999"
spec:
  parentRef:
    name: ls-proto-conflict
    namespace: gateway-conformance-infra
  listeners:
    - name: tls-on-port-80
      port: 80
      protocol: TLS
      tls:
        mode: Passthrough
status:
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: No valid listeners
      reason: ListenersNotValid
      status: "False"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: No valid listeners
      reason: ListenersNotValid
      status: "False"
      type: Programmed
  listeners:
    - attachedRoutes: 0
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener has a conflict
          reason: ProtocolConflict
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener has a conflict
          reason: ProtocolConflict
          status: "False"
          type: Programmed
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener has a conflict
          reason: ProtocolConflict
          status: "True"
          type: Conflicted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      name: tls-on-port-80
