operator/pkg/gateway-api/testdata/gateway/listenerset-protocol-conflict/output/listenerset-protocol-conflict-mixed.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  creationTimestamp: null
  name: protocol-conflict-mixed
  namespace: gateway-conformance-infra
  resourceVersion: "999"
spec:
  parentRef:
    name: protocol-conflict
    namespace: gateway-conformance-infra
  listeners:
    - name: tcp-on-port-80
      port: 80
      protocol: TCP
    - name: http-on-port-8080
      port: 8080
      protocol: HTTP
status:
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: ListenerSet is accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: ListenerSet is programmed
      reason: Programmed
      status: "True"
      type: Programmed
  listeners:
    - attachedRoutes: 0
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message:
            'Listener conflicts with listener "http": same port 80 has incompatible
            protocols.'
          reason: ProtocolConflict
          status: "True"
          type: Conflicted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message:
            'Listener not valid. Listener conflicts with listener "http": same
            port 80 has incompatible protocols.'
          reason: ProtocolConflict
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener not valid
          reason: ProtocolConflict
          status: "False"
          type: Programmed
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      name: tcp-on-port-80
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: TCPRoute
    - attachedRoutes: 0
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Programmed
          reason: Programmed
          status: "True"
          type: Programmed
      name: http-on-port-8080
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
