operator/pkg/gateway-api/testdata/gateway/listenerset-protocol-conflict/output/listenerset-protocol-conflict-only.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  creationTimestamp: null
  name: protocol-conflict-only
  namespace: gateway-conformance-infra
  resourceVersion: "999"
spec:
  parentRef:
    name: protocol-conflict
    namespace: gateway-conformance-infra
  listeners:
    - name: tcp-on-port-80
      port: 80
      protocol: TCP
status:
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: No valid listeners
      reason: ListenersNotValid
      status: "False"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: No valid listeners
      reason: ListenersNotValid
      status: "False"
      type: Programmed
  listeners:
    - attachedRoutes: 0
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message:
            'Listener conflicts with listener "http": same port 80 has incompatible
            protocols.'
          reason: ProtocolConflict
          status: "True"
          type: Conflicted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message:
            'Listener not valid. Listener conflicts with listener "http": same
            port 80 has incompatible protocols.'
          reason: ProtocolConflict
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener not valid
          reason: ProtocolConflict
          status: "False"
          type: Programmed
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      name: tcp-on-port-80
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: TCPRoute
